Add a few tables

--- a/pages/english.mdx
+++ b/pages/english.mdx
@@ -12,19 +12,19 @@ The Kifuliiru Project is a vibrant initiative dedicated to celebrating the Kiful
 
 At the Kifuliiru Project, we are working on numerous exciting initiatives that require diverse talents and perspectives. We believe in the power of collaboration and the unique contributions that individuals from various backgrounds can bring to our efforts. Here’s how you can play a role:
 
-### Technology Enthusiasts
+## Technology Enthusiasts
 
 Are you skilled in web development, mobile app creation, data science, or digital tools? We welcome tech-savvy individuals to help us build and enhance platforms that support our community. Whether it's developing educational apps, creating online resources, or utilizing data to understand language trends, your expertise is crucial in bringing our vision to life.
 
-### Media Creatives
+## Media Creatives
 
 Do you have a passion for storytelling through visual media? If you are a photographer, videographer, or journalist, your creativity can help us capture the essence of the Kifuliiru language and culture. Join us in documenting our journey, producing engaging content, and sharing the stories of our community members. Your work can inspire others and raise awareness about our initiatives.
 
-### Linguists and Language Educators
+## Linguists and Language Educators
 
 If you are a linguist, language teacher, or someone with a deep appreciation for languages, your insights are invaluable. We need your expertise in developing educational materials, conducting research, and creating resources that support language learners. Together, we can create a robust curriculum that not only teaches the language but also instills a sense of pride in its cultural heritage.
 
-### Community Advocates
+## Community Advocates
 
 We believe that community involvement is key to the success of our projects. If you are passionate about promoting the Kifuliiru language and culture, we invite you to be part of our advocacy efforts. Whether through organizing events, workshops, or community outreach, your efforts can help raise awareness and engage others in our mission.
 
