--- a/pages/francais.mdx
+++ b/pages/francais.mdx
@@ -14,19 +14,19 @@ Le Projet Kifuliiru est une initiative dynamique dédiée à la célébration de
 
 Au Projet Kifuliiru, nous travaillons sur de nombreuses initiatives passionnantes qui nécessitent des talents et des perspectives divers. Nous croyons au pouvoir de la collaboration et aux contributions uniques que des individus de divers horizons peuvent apporter à nos efforts. Voici comment vous pouvez jouer un rôle :
 
-### Passionnés de Technologie
+## Passionnés de Technologie
 
 Êtes-vous compétent en développement web, création d'applications mobiles, science des données ou outils numériques ? Nous accueillons les personnes technophiles pour nous aider à construire et à améliorer les plateformes qui soutiennent notre communauté. Que ce soit pour développer des applications éducatives, créer des ressources en ligne ou utiliser des données pour comprendre les tendances linguistiques, votre expertise est cruciale pour donner vie à notre vision.
 
-### Créateurs de Médias
+## Créateurs de Médias
 
 Avez-vous une passion pour raconter des histoires à travers des médias visuels ? Si vous êtes photographe, vidéaste ou journaliste, votre créativité peut nous aider à capturer l'essence de la langue et de la culture Kifuliiru. Rejoignez-nous pour documenter notre parcours, produire un contenu engageant et partager les histoires de nos membres de la communauté. Votre travail peut inspirer les autres et sensibiliser aux initiatives que nous menons.
 
-### Lingüistes et Éducateurs Linguistiques
+## Linguistes et Éducateurs Linguistiques
 
 Si vous êtes linguiste, enseignant de langue ou quelqu'un qui apprécie profondément les langues, vos idées sont inestimables. Nous avons besoin de votre expertise pour développer des matériels éducatifs, mener des recherches et créer des ressources qui soutiennent les apprenants en langues. Ensemble, nous pouvons créer un programme robuste qui enseigne non seulement la langue, mais qui instille également un sentiment de fierté pour son patrimoine culturel.
 
-### Défenseurs de la Communauté
+## Défenseurs de la Communauté
 
 Nous croyons que l'implication de la communauté est essentielle au succès de nos projets. Si vous êtes passionné par la promotion de la langue et de la culture Kifuliiru, nous vous invitons à faire partie de nos efforts de plaidoyer. Que ce soit par l'organisation d'événements, d'ateliers ou de sensibilisation communautaire, vos efforts peuvent aider à sensibiliser et à engager d'autres personnes dans notre mission.
 
