--- a/pages/kiswahili.mdx
+++ b/pages/kiswahili.mdx
@@ -1,4 +1,3 @@
-
 ## Swahili Version
 
 # Karibu kwenye Mradi wa Kifuliiru!
@@ -15,19 +14,19 @@ Mradi wa Kifuliiru ni juhudi yenye nguvu inayojitolea kusherehekea lugha na tama
 
 Katika Mradi wa Kifuliiru, tunafanya kazi kwenye miradi kadhaa ya kusisimua ambayo yanahitaji talanta na mitazamo tofauti. Tunaamini katika nguvu ya ushirikiano na mchango wa kipekee ambao watu kutoka nyanja mbalimbali wanaweza kuleta kwa juhudi zetu. Hapa kuna jinsi unaweza kuchangia:
 
-### Wapenzi wa Teknolojia
+## Wapenzi wa Teknolojia
 
 Je, una ujuzi katika maendeleo ya wavuti, uundaji wa programu za simu, sayansi ya data, au zana za kidijitali? Tunakaribisha watu wenye ujuzi wa kiteknolojia kutusaidia kujenga na kuboresha majukwaa yanayosaidia jamii yetu. Iwe ni kuunda programu za elimu, kuunda rasilimali za mtandaoni, au kutumia data kuelewa mwelekeo wa lugha, utaalamu wako ni muhimu katika kuleta maono yetu kuwa halisi.
 
-### Wanaumba Media
+## Wanaumba Media
 
 Je, una shauku ya kusimulia hadithi kupitia vyombo vya habari vya kuona? Ikiwa wewe ni mpiga picha, mpiga video, au mwandishi wa habari, ubunifu wako unaweza kutusaidia kukamata kiini cha lugha na tamaduni ya Kifuliiru. Jiunge nasi katika kuandika safari yetu, kuzalisha maudhui yanayovutia, na kushiriki hadithi za wanajamii wetu. Kazi yako inaweza kuwahamasisha wengine na kuongeza ufahamu juu ya juhudi zetu.
 
-### Wanalingu na Walimu wa Lugha
+## Wanalingu na Walimu wa Lugha
 
 Ikiwa wewe ni mlingu, mwalimu wa lugha, au mtu anayeipenda lugha, maarifa yako ni ya thamani kubwa. Tunahitaji utaalamu wako katika kuunda vifaa vya elimu, kufanya utafiti, na kuunda rasilimali zinazosaidia wanafunzi wa lugha. Kwa pamoja, tunaweza kuunda mtaala thabiti ambao haujifunzi tu lugha bali pia unatoa hisia ya fahari kuhusu urithi wake wa kiutamaduni.
 
-### Wanaweza wa Jamii
+## Wanaweza wa Jamii
 
 Tunaamini kuwa ushirikiano wa jamii ni muhimu kwa mafanikio ya miradi yetu. Ikiwa una shauku ya kukuza lugha na tamaduni ya Kifuliiru, tunakualika kuwa sehemu ya juhudi zetu za kutetea. Iwe ni kupitia kuandaa matukio, warsha, au ufahamu wa jamii, juhudi zako zinaweza kusaidia kuhamasisha na kuwajumuisha wengine katika dhamira yetu.
 
@@ -43,7 +42,7 @@ Kwa kujiunga na Mradi wa Kifuliiru, utakuwa sehemu ya jamii yenye nguvu inayojit
 
 Hapa kuna sehemu ya "Wasiliana Nasi" iliyokamilishwa:
 
-### Wasiliana Nasi
+## Wasiliana Nasi
 
 Tunapenda kusikia kutoka kwako! Ikiwa una maswali, maoni, au unataka kujifunza zaidi kuhusu miradi yetu, tafadhali usisite kutufikia. Unaweza kutufikia kupitia:
 
