--- a/pages/ukuharura/ibindu.mdx
+++ b/pages/ukuharura/ibindu.mdx
@@ -31,11 +31,86 @@ Ukushagira ku busha ukuhisa kw'ikumi, yo ndondeezo ya byooshi.
 
 Ku balya abakomiri izindi ndeto nge' Kingereza ne' Kifaransa, mu yizo ndeto ukuharura umutondera no'muharuro uanbikage kwohe igambo kandi li ikindu. Haliko mu Kifuliiru umutondera n'igambo uanbikage kwohe umuharuro. Kwookuno:
 
-Umulya muguma = Umulya 1.
-Twangayandika:
-1 umulya
-Tunasome:
+Umulya muguma = Umulya 1.  
+Twangayandika:  
+1 umulya  
+Tunasome:  
 Umulya muguma.
 
 Ikiindu tuloziizi ukuyerekana hano, kuliri kudeta kwo ukuharura ibiindu mu Kifuliiru kushagira ku busha kandi li bweneene bweneene ku higuma ukuhisa kw'ikumi, bihuniri ukuyitoonda lwooshi lwooshi higulu ngisi kwo igambo limuhinduka, kwo na ngisi kwo tumudeta umuharuro kumuhinduka.
 Twamubonaga bingi hano.
+
+### Tuharure imilya
+
+| Umuharuro | umuharuro gwe'biindu mu magambo | Kwo tugayandika mu muharuro |
+| --------- | ------------------------------- | --------------------------- |
+| 1         | Umulya muguma                   | 1 muguma                    |
+| 2         | Imilya ibiri                    | 2 imilya                    |
+| 3         | Imilya ishatu                   | 3 imilya                    |
+| 4         | Imilya ina                      | 4 imilya                    |
+| 5         | Imilya itanu                    | 5 imilya                    |
+| 6         | Imilya ndatu                    | 6 imilya                    |
+| 7         | Imilya iriinda                  | 7 imilya                    |
+| 8         | Imilya munaana                  | 8 imilya                    |
+| 9         | Imilya mweenda                  | 9 imilya                    |
+| 10        | Imilya ikumi                    | 10 imilya                   |
+
+### Tuharure ibigundu
+
+| Umuharuro | umuharuro gwe'biindu mu magambo | Kwo tugayandika mu muharuro |
+| --------- | ------------------------------- | --------------------------- |
+| 1         | Kiguundu kiguma                 | 1 kiguundu                  |
+| 2         | Ibiguundu bibiri                | 2 ibiguundu                 |
+| 3         | Ibiguundu bishatu               | 3 ibinguundu                |
+| 4         | Ibiguundu bina                  | 4 ibinguundu                |
+| 5         | Ibiguundu bitanu                | 5 ibinguundu                |
+| 6         | Ibiguundu ndatu                 | 6 ibinguundu                |
+| 7         | Ibiguundu biriinda              | 7 ibinguundu                |
+| 8         | Ibiguundu munaana               | 8 ibinguundu                |
+| 9         | Ibiguundu mweenda               | 9 ibinguundu                |
+| 10        | Ibiguundu ikumi                 | 10 ibinguundu               |
+
+### Tuharure inyiji
+
+| Umuharuro | umuharuro gwe'biindu mu magambo | Kwo tugayandika mu muharuro |
+| --------- | ------------------------------- | --------------------------- |
+| 1         | Lwiiji luguma                   | 1 lwiiji                    |
+| 2         | Inyiiji zibiri                  | 2 inyiiji                   |
+| 3         | Inyiiji zishatu                 | 3 inyiiji                   |
+| 4         | Inyiiji zina                    | 4 inyiiji                   |
+| 5         | Inyiiji zitanu                  | 5 inyiiji                   |
+| 6         | Inyiiji ndatu                   | 6 inyiiji                   |
+| 7         | Inyiiji ziriinda                | 7 inyiiji                   |
+| 8         | Inyiiji munaana                 | 8 inyiiji                   |
+| 9         | Inyiiji mweenda                 | 9 inyiiji                   |
+| 10        | Inyiiji ikumi                   | 10 inyiiji                  |
+
+### Tuharure ibijaangala
+
+| Umuharuro | umuharuro gwe'biindu mu magambo | Kwo tugayandika mu muharuro |
+| --------- | ------------------------------- | --------------------------- |
+| 1         | Kijaangala kiguma               | 1 kijaangala                |
+| 2         | Bijaangala bibiri               | 2 bijaangala                |
+| 3         | Bijaangala bishatu              | 3 bijaangala                |
+| 4         | Bijaangala bina                 | 4 bijaangala                |
+| 5         | Bijaangala bitanu               | 5 bijaangala                |
+| 6         | Bijaangala ndatu                | 6 bijaangala                |
+| 7         | Bijaangala biriinda             | 7 bijaangala                |
+| 8         | Bijaangala munaana              | 8 bijaangala                |
+| 9         | Bijaangala mweenda              | 9 bijaangala                |
+| 10        | Bijaangala ikumi                | 10 bijaangala               |
+
+### Tuharure amafuno
+
+| Umuharuro | umuharuro gwe'biindu mu magambo | Kwo tugayandika mu muharuro |
+| --------- | ------------------------------- | --------------------------- |
+| 1         | Ifuno liguma                    | 1 ifuno                     |
+| 2         | Mafuno gabiri                   | 2 mafuno                    |
+| 3         | Mafuno gashatu                  | 3 mafuno                    |
+| 4         | Mafuno gana                     | 4 mafuno                    |
+| 5         | Mafuno gatanu                   | 5 mafuno                    |
+| 6         | Mafuno ndatu                    | 6 mafuno                    |
+| 7         | Mafuno galiinda                 | 7 mafuno                    |
+| 8         | Mafuno munaana                  | 8 mafuno                    |
+| 9         | Mafuno mweenda                  | 9 mafuno                    |
+| 10        | Mafuno ikumi                    | 10mafuno                    |
