Add a few more  tables

--- a/pages/ukuharura/ibindu.mdx
+++ b/pages/ukuharura/ibindu.mdx
@@ -113,4 +113,109 @@ Twamubonaga bingi hano.
 | 7         | Mafuno galiinda                 | 7 mafuno                    |
 | 8         | Mafuno munaana                  | 8 mafuno                    |
 | 9         | Mafuno mweenda                  | 9 mafuno                    |
-| 10        | Mafuno ikumi                    | 10mafuno                    |
+| 10        | Mafuno ikumi                    | 10 mafuno                   |
+
+### Tuharure utwaaya
+
+| Umuharuro | umuharuro gwe'biindu mu magambo | Kwo tugayandika mu muharuro |
+| --------- | ------------------------------- | --------------------------- |
+| 1         | Kaaya kaguma                    | 1 kaaya                     |
+| 2         | Twaaya tubiri                   | 2 twaaya                    |
+| 3         | Twaaya tushatu                  | 3 twaaya                    |
+| 4         | Twaaya tuna                     | 4 twaaya                    |
+| 5         | Twaaya tutanu                   | 5 twaaya                    |
+| 6         | Twaaya ndatu                    | 6 twaaya                    |
+| 7         | Twaaya tuliinda                 | 7 twaaya                    |
+| 8         | Twaaya munaana                  | 8 twaaya                    |
+| 9         | Twaaya mweenda                  | 9 twaaya                    |
+| 10        | Twaaya ikumi                    | 10 twaaya                   |
+
+### Tuharure imigazi
+
+| Umuharuro | umuharuro gwe'biindu mu magambo | Kwo tugayandika mu muharuro |
+| --------- | ------------------------------- | --------------------------- |
+| 1         | Mugazi muguma                   | 1 mugazi                    |
+| 2         | Migazi ibiri                    | 2 migazi                    |
+| 3         | Migazi ishatu                   | 3 migazi                    |
+| 4         | Migazi ina                      | 4 migazi                    |
+| 5         | Migazi itanu                    | 5 migazi                    |
+| 6         | Migazi ndatu                    | 6 migazi                    |
+| 7         | Migazi iriinda                  | 7 migazi                    |
+| 8         | Migazi munaana                  | 8 migazi                    |
+| 9         | Migazi mweenda                  | 9 migazi                    |
+| 10        | Migazi ikumi                    | 10 migazi                   |
+
+### Tuharure inyiiji
+
+| Umuharuro | umuharuro gwe'biindu mu magambo | Kwo tugayandika mu muharuro |
+| --------- | ------------------------------- | --------------------------- |
+| 1         | Lwiiji luguma                   | 1 lwiiji                    |
+| 2         | Nyiiji ibiri                    | 2 nyiiji                    |
+| 3         | Nyiiji ishatu                   | 3 nyiiji                    |
+| 4         | Nyiiji ina                      | 4 nyiiji                    |
+| 5         | Nyiiji itanu                    | 5 nyiiji                    |
+| 6         | Nyiiji ndatu                    | 6 nyiiji                    |
+| 7         | Nyiiji iriinda                  | 7 nyiiji                    |
+| 8         | Nyiiji munaana                  | 8 nyiiji                    |
+| 9         | Nyiiji mweenda                  | 9 nyiiji                    |
+| 10        | Nyiiji ikumi                    | 10 nyiiji                   |
+
+### Tuharure ibibaaja
+
+| Umuharuro | umuharuro gwe'biindu mu magambo | Kwo tugayandika mu muharuro |
+| --------- | ------------------------------- | --------------------------- |
+| 1         | Kibaaja kiguma                  | 1 kibaaja                   |
+| 2         | Bibaaja bibiri                  | 2 bibaaja                   |
+| 3         | Bibaaja bishatu                 | 3 bibaaja                   |
+| 4         | Bibaaja bina                    | 4 bibaaja                   |
+| 5         | Bibaaja bitanu                  | 5 bibaaja                   |
+| 6         | Bibaaja ndatu                   | 6 bibaaja                   |
+| 7         | Bibaaja biriinda                | 7 bibaaja                   |
+| 8         | Bibaaja munaana                 | 8 bibaaja                   |
+| 9         | Bibaaja mweenda                 | 9 bibaaja                   |
+| 10        | Bibaaja ikumi                   | 10 bibaaja                  |
+
+### Tuharure imiimbati
+
+| Umuharuro | umuharuro gwe'biindu mu magambo | Kwo tugayandika mu muharuro |
+| --------- | ------------------------------- | --------------------------- |
+| 1         | Muumbati muguma                 | 1 muumbati                  |
+| 2         | Miimbati ibiri                  | 2 miimbati                  |
+| 3         | Miimbati ishatu                 | 3 miimbati                  |
+| 4         | Miimbati ina                    | 4 miimbati                  |
+| 5         | Miimbati itanu                  | 5 miimbati                  |
+| 6         | Miimbati ndatu                  | 6 miimbati                  |
+| 7         | Miimbati iriinda                | 7 miimbati                  |
+| 8         | Miimbati munaana                | 8 miimbati                  |
+| 9         | Miimbati mweenda                | 9 miimbati                  |
+| 10        | Miimbati ikumi                  | 10 miimbati                 |
+
+### Tuharure imigazi
+
+| Umuharuro | umuharuro gwe'biindu mu magambo | Kwo tugayandika mu muharuro |
+| --------- | ------------------------------- | --------------------------- |
+| 1         | Mugazi muguma                   | 1 mugazi                    |
+| 2         | Migazi ibiri                    | 2 migazi                    |
+| 3         | Migazi ishatu                   | 3 migazi                    |
+| 4         | Migazi ina                      | 4 migazi                    |
+| 5         | Migazi itanu                    | 5 migazi                    |
+| 6         | Migazi ndatu                    | 6 migazi                    |
+| 7         | Migazi iriinda                  | 7 migazi                    |
+| 8         | Migazi munaana                  | 8 migazi                    |
+| 9         | Migazi mweenda                  | 9 migazi                    |
+| 10        | Migazi ikumi                    | 10 migazi                   |
+
+### Tuharure utubaanda
+
+| Umuharuro | umuharuro gwe'biindu mu magambo | Kwo tugayandika mu muharuro |
+| --------- | ------------------------------- | --------------------------- |
+| 1         | Kabaanda kaguma                 | 1 kabaanda                  |
+| 2         | Tubaanda tubiri                 | 2 tubaanda                  |
+| 3         | Tubaanda tushatu                | 3 tubaanda                  |
+| 4         | Tubaanda tuna                   | 4 tubaanda                  |
+| 5         | Tubaanda tutanu                 | 5 tubaanda                  |
+| 6         | Tubaanda ndatu                  | 6 tubaanda                  |
+| 7         | Tubaanda turiinda               | 7 tubaanda                  |
+| 8         | Tubaanda munaana                | 8 tubaanda                  |
+| 9         | Tubaanda mweenda                | 9 tubaanda                  |
+| 10        | Tubaanda ikumi                  | 10 tubaanda                 |
