Add amagaambo tu buniini bwiingi page

--- a/pages/amagambo/buniini-bwingi.mdx
+++ b/pages/amagambo/buniini-bwingi.mdx
@@ -1,1 +1,16 @@
 # Ubuniini no'bwingi bw'amagambo mu Kifuliiru
+
+Hano haliri amagaambo mu buniini tumugabiika mu bwiingi bwago
+
+| Igaambo mu buniini | Igaambo mu bwiingi |
+| ------------------ | ------------------ |
+| Umuundu            | Abaandu            |
+| Akaaya             | Utwaaya            |
+| Umugazi            | Imigazi            |
+| Ulwiiji            | Inyiiji            |
+| Akabwa             | Utubwa             |
+| Ikihaando          | Ibihaando          |
+| Invigo             | Invigo             |
+| Izuuba             | Izuuba             |
+| Umweezi            | Imyeezi            |
+| Indoonde           | Indoonde           |
