--- a/pages/ukuharura/igana.mdx
+++ b/pages/ukuharura/igana.mdx
@@ -1,11 +1,11 @@
-# Kuharura kusagira ku ihana kuhisa ku ihana na makumi galwenda na mwenda (100-199)
+# Kuharura kusagira ku ihana kuhisa ku ihana na makumi galimweenda na mweenda (100-199)
 
-Hano tuloziizi tuharure ukushagira ku igana ukuhisa ku igana na makumi galimwenda na mweenda.
+Hano tuloziizi tuharure ukushagira ku igana ukuhisa ku igana na makumi galimweenda na mweenda.
 Ikindu tukwaniini ukuemya no'kukengera, kuliri kudeta kwo ikyanya twabona ku kuharura ukushagira ku igana ikuhisa ku kihumbi, twadeta kwo tugayubakira ku ngisi byo tukoligweti byo twabona mu [Ubusha ku ikumi](./zero-ku-ikumi) na ku [Ikumi kw'igana](./ikumi-ku-igana).
 
 Hano tugagenderera kwookwo haliko tukolaga tugayoongera ku byo tukoligweti mu kubushaga yibyo bibi bya mbere na bino byo'tukolera kwohe.
 
-Ukuharura ukushaga kw'iagana ukuhisa ku igana na makumi galwenda na mwenda kuliri kwookuno:
+Ukuharura ukushaga kw'iagana ukuhisa ku igana na makumi galimweenda na mweenda kuliri kwookuno:
 
 Tuyabire kwo tugweeti umuharuro 155.
 => Bino bidesiri kwo tugweti igana, tugweeti na amakumi gatanu, tugwetu no'butanu.
