Add some other pages

--- a/pages/ukuharura-ukuleziizi/ndondeero.mdx
+++ b/pages/ukuharura-ukuleziizi/ndondeero.mdx
@@ -5,3 +5,5 @@ Ku kyanya kera twaharura amagambi, ibindu, ... mu Kifuliiru, haliri ahandu ho tu
 Hano tugabonaga bingi mu yibyo ibikolihanisiri mu kuharura.
 
 Higulu lyo kubona kwo mu Kifuliiru haliri ibiindu byo tutagweeti higulu lyo kuharura imiharuro ileziizi, tugayitiza biguma mu ndeeto nga Kifaransa ne Kingereza higulu tubihikireko.
+
+Ku kino kinyerere, higulu ubuhinga tumukoleesa hano butazituyemerera kwo twangabiika byooshi hano, ku kyanya tugahikira bino, tugateyigiriza naho mu njira yo'kuyandika ku tabloo.
