--- a/pages/amagambo/ulufwabe.mdx
+++ b/pages/amagambo/ulufwabe.mdx
@@ -4,66 +4,66 @@ Mu Kifuliiru tugweti ulufwabe, nga ngisi kwo mu zindi ndeto namwo muliri ulufwab
 
 Ulufwabe lwe' Kifuliiru lwoluno nga ngisi kwo lukulikiri:
 
-Mu herufi niini: a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, r, s, t, u, v, w, y, z
-
 Mu herufi mbamu: A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, R, S, T, U, V, W, Y, Z
 
-a = Herufi ya mbere mu lufwabe lwe' Kifuliiru  
-b = Herufi ya kabiri mu lufwabe lwe' Kifuliiru  
-c = Herufi ya kashatu mu lufwabe lwe' Kifuliiru  
-d = Herufi ya kana mu lufwabe lwe' Kifuliiru  
-e = Herufi ya katanu mu lufwabe lwe' Kifuliiru  
-f = Herufi ye'ndatu mu lufwabe lwe' Kifuliiru  
-g = Herufi ya kaliinda mu lufwabe lwe' Kifuliiru  
-h = Herufi yo'munaana mu lufwabe lwe' Kifuliiru  
-i = Herufi yo'mweenda mu lufwabe lwe' Kifuliiru  
-j = Herufi y'ikumi mu lufwabe lwe' Kifuliiru  
-k = Herufi y'ikumi na nguma mu lufwabe lwe' Kifuliiru  
-l = Herufi y'ikumi na kabiri mu lufwabe lwe' Kifuliiru  
-m = Herufi y'ikumi na kashatu mu lufwabe lwe' Kifuliiru  
-n = Herufi y'ikumi na kana mu lufwabe lwe' Kifuliiru  
-o = Herufi y'ikumi na katanu mu lufwabe lwe' Kifuliiru  
-p = Herufi y'ikumi na ndatu mu lufwabe lwe' Kifuliiru  
-r = Herufi y'ikumi na kalinda mu lufwabe lwe' Kifuliiru  
-s = Herufi y'ikumi na munaana mu lufwabe lwe' Kifuliiru  
-t = Herufi y'ikumi na mweenda mu lufwabe lwe' Kifuliiru  
-u = Herufi ya makumi gabiri mu lufwabe lwe' Kifuliiru  
-v = Herufi ya makumi gabiri na nguma mu lufwabe lwe' Kifuliiru  
-w = Herufi ya makumi gabiri na kabiri mu lufwabe lwe' Kifuliiru  
-y = Herufi ya makumi gabiri na kashatu mu lufwabe lwe' Kifuliiru  
-z = Herufi ya makumi gabiri na kana mu lufwabe lwe' Kifuliiru
+Mu herufi niini: a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, r, s, t, u, v, w, y, z
+
+A -> a = Herufi ya mbere mu lufwabe lwe' Kifuliiru  
+B -> b = Herufi ya kabiri mu lufwabe lwe' Kifuliiru  
+C -> c = Herufi ya kashatu mu lufwabe lwe' Kifuliiru  
+D -> d = Herufi ya kana mu lufwabe lwe' Kifuliiru  
+E -> e = Herufi ya katanu mu lufwabe lwe' Kifuliiru  
+F -> f = Herufi ye'ndatu mu lufwabe lwe' Kifuliiru  
+G -> g = Herufi ya kaliinda mu lufwabe lwe' Kifuliiru  
+H -> h = Herufi yo'munaana mu lufwabe lwe' Kifuliiru  
+I -> i = Herufi yo'mweenda mu lufwabe lwe' Kifuliiru  
+J -> j = Herufi y'ikumi mu lufwabe lwe' Kifuliiru  
+K -> k = Herufi y'ikumi na nguma mu lufwabe lwe' Kifuliiru  
+L -> l = Herufi y'ikumi na kabiri mu lufwabe lwe' Kifuliiru  
+M -> m = Herufi y'ikumi na kashatu mu lufwabe lwe' Kifuliiru  
+N -> n = Herufi y'ikumi na kana mu lufwabe lwe' Kifuliiru  
+O -> o = Herufi y'ikumi na katanu mu lufwabe lwe' Kifuliiru  
+P -> p = Herufi y'ikumi na ndatu mu lufwabe lwe' Kifuliiru  
+R -> r = Herufi y'ikumi na kalinda mu lufwabe lwe' Kifuliiru  
+S -> s = Herufi y'ikumi na munaana mu lufwabe lwe' Kifuliiru  
+T -> t = Herufi y'ikumi na mweenda mu lufwabe lwe' Kifuliiru  
+U -> u = Herufi ya makumi gabiri mu lufwabe lwe' Kifuliiru  
+V -> v = Herufi ya makumi gabiri na nguma mu lufwabe lwe' Kifuliiru  
+W -> w = Herufi ya makumi gabiri na kabiri mu lufwabe lwe' Kifuliiru  
+Y -> y = Herufi ya makumi gabiri na kashatu mu lufwabe lwe' Kifuliiru  
+Z -> z = Herufi ya makumi gabiri na kana mu lufwabe lwe' Kifuliiru
 
 Li wangaba ukomiri izindi ndeto nga i Kifransa kandi li i Kingereza, ulufwabe lwabo luliri kwokuno:
 
-Mu herufi niini: a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, q, r, s, t, u, v, x, y, z
-
 Mu herufi mbaamu: A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y, Z
+
+Mu herufi niini: a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, q, r, s, t, u, v, x, y, z
 
 Twehe ulufwabe lwitu lugweeti iherufi makumi gabiri na zina (24), haliko mu Kifransa na mu Kingereza muliri i herufi makumi gabiri na ndatu (26). Batuhimiri iherufi zibiri: q ne' x (Q, X).
 
 ## Kuti tumusoma iherufi zo'lufwabe mu Kifuliiru?
 
-a = [a]  
-b = [bhe]. Ino herufi tumugisoma nga b igwatini ne' h. Kwo kudeta mu Kifuliiru tutamudeta b haliko bh.  
-c = [ch].  
-d = [de]  
-e = [e]  
-f = [fe]  
-g = [ge]  
-h = [he]  
-i = [i]  
-j = [je]  
-k = [ke]  
-l = [le]  
-m = [me]  
-n = [ne]  
-o = [o]  
-p = [pe]  
-r = [re]  
-s = [se]  
-t = [te]  
-u = [u]  
-v = [ve]  
-w = [we]  
-y = [ye]  
-z = [ze]
+A -> a = [a]  
+B -> b = [bhe]. Ino herufi tumugisoma nga b igwatini ne' h. Kwo kudeta mu Kifuliiru tutamudeta b haliko bh.  
+C -> c = [ch].  
+D -> d = [de]  
+E -> e = [e]  
+F -> f = [fe]  
+G -> g = [ge]  
+H -> h = [he]  
+I -> i = [i]  
+J -> j = [je]  
+K -> k = [ke]  
+L -> l = [le]  
+M -> m = [me]  
+N -> n = [ne]  
+O -> o = [o]  
+P -> p = [pe]  
+R -> r = [re]  
+S -> s = [se]  
+T -> t = [te]  
+U -> u = [u]  
+V -> v = [ve]  
+W -> w = [we]  
+Y -> y = [ye]  
+Z -> z = [ze]
