Add new words to ubwiingi no buniini

--- a/pages/amagambo/buniini-bwingi.mdx
+++ b/pages/amagambo/buniini-bwingi.mdx
@@ -14,3 +14,47 @@ Hano haliri amagaambo mu buniini tumugabiika mu bwiingi bwago
 | Izuuba             | Izuuba             |
 | Umweezi            | Imyeezi            |
 | Indoonde           | Indoonde           |
+| Umukazi            | Abakazi            |
+| Umwaana            | Abaana             |
+| Umulya             | Imilya             |
+| Umushaano          | Imishaano          |
+| Umutabana          | Abatabana          |
+| Umwalikazi         | Abalikazi          |
+| Umushuumba         | Abashuumba         |
+| Umuhisi            | Abahisi            |
+| Umutulani          | Abatulani          |
+| Umutwaali          | Abatwaali          |
+| Umutwaazi          | Abatwaazi          |
+| Umuhiivi           | Abahiivi           |
+| Akabwa             | Utubwa             |
+| Ikihibwa           | Utubwa             |
+| Ihyaya             | Utwaya             |
+| Umuungere          | Abaangere          |
+| Umuragizi          | Abaragizi          |
+| Igana              | Amagana            |
+| Ijana              | Amajana            |
+| Ikihuumbi          | Ibihuumbi          |
+| Ikumi              | Amakumi            |
+| Umulyooni          | Imilyooni          |
+| Umulyari           | Imilyari           |
+| Ukushaata          | Amashaata          |
+| Ilyogo             | Amalyogo           |
+| Ikigigo            | Ibigigo            |
+| Ikigogo            | Ibigogo            |
+| Ikiguundu          | Ibiguundu          |
+| Umuumbati          | Imiimbati          |
+| Ikisheke           | Ibisheke           |
+| Ikishekesheke      | Ibishekesheke      |
+| Ikibuuzo           | Ibibuuzo           |
+| Izuni              | Izunu              |
+| Ikituumbi          | Ibituumbi          |
+| Ulwiivi            | Inyiivi            |
+| Umulyaango         | Imilyaango         |
+| Indambara          | Indambara          |
+| Umushaano          | Imishaano          |
+| Umushana           | Imishana           |
+| Uluugi             | Uluugi             |
+| Amalega            | Amalega            |
+| Umushambaale       | Ubushambaale       |
+| Umuganuulo         | Imiganuulo         |
+|                    |                    |
