Correct mistakes in herufi texts

--- a/pages/amagambo/herufi.mdx
+++ b/pages/amagambo/herufi.mdx
@@ -2,7 +2,7 @@
 
 Mu Kifuliiru tumukolesa i herufi ukudeta kwo tufunganye amagambo. Tugweeti iherufi izishuni ne'zindi ndeto nge' Kiswahili, Kifaransa, Kingereza, ne'zindi nyingi. Tumukolesa injira yo kuyandika bamuberangira ye Kilatini (Latin Scripting system).
 
-Kera twabona [iherufdi zooshi zo'lufwabe mu Kifuliiru](./ulufwabe), hano tukolaga tugasoma ngisi kwo amagambo tumugavunganya ukulengera mu herufi zo lufwabe lwe' Kifuliiru.
+Kera twabona [iherufi zooshi zo'lufwabe mu Kifuliiru](./ulufwabe), hano tukolaga tugasoma ngisi kwo amagambo tumugavunganya ukulengera mu herufi zo lufwabe lwe' Kifuliiru.
 
 ## Herufi izimutuhereza izu: a, e, i, o, u
 
@@ -12,7 +12,7 @@ Mu herufi mbamu: A, E, I, O, U.
 
 ## Izindi herufi : b, c, d, f, g, h, j, k, l, m, n, p, r, s, t, v, w, y, z
 
-Mu Kifuliiru izindi herufi izataliri z'izu, tumuziberangira iherufi zo'kugwatanisa. Ziliri ikumi na mweenda (19). Zo zezino:
+Mu Kifuliiru izindi herufi izitaliri z'izu, tumuziberangira iherufi zo'kugwatisa. Ziliri ikumi na mweenda (19). Zo zezino:
 
 Mu herufi niini: b, c, d, f, g, h, j, k, l, m, n, p, r, s, t, v, w, y, z  
 Mu herufi mbamu: B, C, D, F, G, H, J, K, L, M, N, P, R, S, T, V, W, Y, Z
