Correct titles on pages of counting

--- a/pages/ukuharura/igana-ku-kihumbi.mdx
+++ b/pages/ukuharura/igana-ku-kihumbi.mdx
@@ -1,4 +1,6 @@
-# Igana ku Kuhimbi
+# Igana ku Kuhimbi(100-1000)
+
+Harura kushagira ku igana ukuhisa ku kihumbi.
 
 Ukuharura ukushaga ku igana kandi li ijana ukuhisa ku kuhumbi kaliri kazi kahamu bweneene na kandi kaliri kingi. Haliko umwazi mwija kuliri kudeta kwo kukolaga kuyubakira ku ndigi byo kera twasoma mu [Ubusha ukuhisa ku mweenda](./zero-ku-ikumi) na [Ikumi ukuhisa ku Ijana](./ikumi-ku-igana).
 
