--- a/pages/ukuharura/igana.mdx
+++ b/pages/ukuharura/igana.mdx
@@ -1,4 +1,6 @@
-# Kuharura kusagira ku ihana kuhisa ku ihana na makumi galimweenda na mweenda (100-199)
+# Igana (100-199)
+
+Harura kusagira ku ihana kuhisa ku ihana na makumi galimweenda na mweenda (100-199).
 
 Hano tuloziizi tuharure ukushagira ku igana ukuhisa ku igana na makumi galimweenda na mweenda.
 Ikindu tukwaniini ukuemya no'kukengera, kuliri kudeta kwo ikyanya twabona ku kuharura ukushagira ku igana ikuhisa ku kihumbi, twadeta kwo tugayubakira ku ngisi byo tukoligweti byo twabona mu [Ubusha ku ikumi](./zero-ku-ikumi) na ku [Ikumi kw'igana](./ikumi-ku-igana).
