--- a/pages/ukuharura/kihumbi-no-kuzamuuka.mdx
+++ b/pages/ukuharura/kihumbi-no-kuzamuuka.mdx
@@ -1,4 +1,6 @@
-# Harura kushagira ku kihumbi kugenederera
+# Kihumbi ukuzamuuka (1000-)
+
+Harura kushagira ku kihumbi kugenderera.
 
 Higulu ukuharura kutamumala, hano ho tukolera ku kuharura kushagira ku kihumbi ukugenderera, tukola tugahana naho injira yo'kulengamwohe ukuharura imiharuro mihamu mihamu.
 
