--- a/pages/ukuharura/magana-gabiri.mdx
+++ b/pages/ukuharura/magana-gabiri.mdx
@@ -1,4 +1,6 @@
-# Harura kushagira ku magana gabiri ukuhisa ku magana gabiri na makumi galimweenda na mweenda (200-299)
+# Magana gabiri (200-299)
+
+Harura kushagira ku magana gabiri ukuhisa ku magana gabiri na makumi galimweenda na mweenda (200-299).
 
 200 = Magana gabiri  
 201 = Magana gabiri na higuma  
