--- a/pages/ukuharura/magana-galimunaana.mdx
+++ b/pages/ukuharura/magana-galimunaana.mdx
@@ -1,4 +1,6 @@
-# Harura kushagira ku Magana galimunaana ukuhisa ku Magana galimunaana na makumi galimweenda na mweenda (800-899)
+# Magana galimuaana (800-899)
+
+Harura kushagira ku magana galimunaana ukuhisa ku Magana galimunaana na makumi galimweenda na mweenda (800-899)
 
 800 = Magana galimunaana  
 801 = Magana galimunaana na higuma  
