--- a/pages/ukuharura/magana-galimweenda.mdx
+++ b/pages/ukuharura/magana-galimweenda.mdx
@@ -1,4 +1,6 @@
-# Harura kushagira ku Magana galimweenda ukuhisa ku Magana galimweenda na makumi galimweenda na mweenda (900-999)
+# Magana galimweenda(900-999)
+
+Harura kushagira ku Magana galimweenda ukuhisa ku Magana galimweenda na makumi galimweenda na mweenda (900-999).
 
 900 = Magana galimweenda  
 901 = Magana galimweenda na higuma  
