--- a/pages/ukuharura/magana-galinda.mdx
+++ b/pages/ukuharura/magana-galinda.mdx
@@ -1,4 +1,6 @@
-# Harura kushagira ku Magana galiinda ukuhisa ku Magana galiinda na makumi galimweenda na mweenda (700-799)
+# Magana galiinda(700-799)
+
+Harura kushagira ku Magana galiinda ukuhisa ku Magana galiinda na makumi galimweenda na mweenda (700-799).
 
 700 = Magana galiinda  
 701 = Magana galiinda na higuma  
