--- a/pages/ukuharura/magana-galindatu.mdx
+++ b/pages/ukuharura/magana-galindatu.mdx
@@ -1,4 +1,6 @@
-# Harura kushagira ku Magana galindatu ukuhisa ku Magana galindatu na makumi galimweenda na mweenda (600-699)
+# Magana galindatu
+
+Harura kushagira ku Magana galindatu ukuhisa ku Magana galindatu na makumi galimweenda na mweenda (600-699).
 
 600 = Magana galindatu  
 601 = Magana galindatu na higuma  
