--- a/pages/ukuharura/magana-gana.mdx
+++ b/pages/ukuharura/magana-gana.mdx
@@ -1,4 +1,6 @@
-# Harura kushagira ku magana gana ukuhisa ku magana gana na makumi galimweenda na mweenda (400-499)
+# Magana gana(400-499)
+
+Harura kushagira ku magana gana ukuhisa ku magana gana na makumi galimweenda na mweenda (400-499).
 
 400 = Magana gana  
 401 = Magana gana na higuma  
