--- a/pages/ukuharura/magana-gashatu.mdx
+++ b/pages/ukuharura/magana-gashatu.mdx
@@ -1,4 +1,6 @@
-# Harura kushagira ku magana gashatu ukuhisa ku magana gashatu na makumi galimweenda na mweenda (300-399)
+# Magana gashatu(300-399)
+
+Harura kushagira ku magana gashatu ukuhisa ku magana gashatu na makumi galimweenda na mweenda (300-399)
 
 300 = Magana gashatu  
 301 = Magana gashatu na higuma  
