--- a/pages/ukuharura/magana-gatanu.mdx
+++ b/pages/ukuharura/magana-gatanu.mdx
@@ -1,4 +1,6 @@
-# Harura kushagira ku Magana gatanu ukuhisa ku Magana gatanu na makumi galimweenda na mweenda (500-599)
+# Magana gatanu(500-599)
+
+Harura kushagira ku Magana gatanu ukuhisa ku Magana gatanu na makumi galimweenda na mweenda (500-599).
 
 500 = Magana gatanu  
 501 = Magana gatanu na higuma  
