--- a/pages/ukuharura/umulyari.mdx
+++ b/pages/ukuharura/umulyari.mdx
@@ -1,5 +1,7 @@
 # Umulyari (1.000.000.000)
 
+Garura byooshi ibiloziri ukuharura ukuhisiri ku mulyari.
+
 1.000.000.000
 
 Ukuharura kwoshi tukola muharura, kukola kugenda tugayubakira naho ku byooshi kera twobona.
