--- a/pages/ukuharura/umulyoni.mdx
+++ b/pages/ukuharura/umulyoni.mdx
@@ -1,5 +1,7 @@
 # Umulyoni (1.000.000)
 
+Harura byooshi ibiloziri ukuharura ukuhisiri ku mulyoni.
+
 Ukuharura kwoshi tukola muharura, kukola kugenda tugayubakira naho ku byooshi kera twobona.
 
 1.000.000 = Umulyoni [Mulyoni muguma]
