--- a/pages/ukuharura/zero-ku-ikumi.mdx
+++ b/pages/ukuharura/zero-ku-ikumi.mdx
@@ -1,4 +1,6 @@
-### Ubusha kandi li namuteneka ukuhisa ku ikumi
+### Ubusha ukuhisa ku ikumi (0-10)
+
+Ubusha kandi li namuteneka ukuhisa ku ikumi.
 
 Ikyanya ukoliyiji ukuharura ukushaga ku busha kandi li zero ukuhisa ku ukumi, yaho kera wamenya bingi higulu ibisigiri bikola binovu bweneene.
 
