--- a/pages/ukuharura/ikumi-ku-igana.mdx
+++ b/pages/ukuharura/ikumi-ku-igana.mdx
@@ -1,4 +1,6 @@
-# Harura kushagira ku Ikumi kuhisa ku igana
+# Ikumi ku igana (10-100)
+
+Harura kushagira ku Ikumi kuhisa ku igana.
 
 Ukuharura mu Kifuliiru ukushagira ku ikumi ukuhisa ku ijana kandi li igana, bitaliri bikayu bweneene higulu kumuba kuyubakira ku ngisi byo kera twabona hano mu [Ubusha ku ikumi](./zero-ku-ikumi). Kwo kudeta tugayabira ikumi tunayongere kwohe ngisi ho tukolihikiziizi.
 
