--- a/pages/amagambo/abaana-ibyaana.mdx
+++ b/pages/amagambo/abaana-ibyaana.mdx
@@ -8,6 +8,12 @@ Kiri na hano mw'itwe ly'amagaambo mugabona kwo kera twahushanisa gano magambo: K
 
 ### Umuundu
 
-| Buniini | Bwiingi |
-| ------- | ------- |
-|         |         |
+| Iziina   | Buniini       | Bwiingi        |
+| -------- | ------------- | -------------- |
+| Ikibuzi  | Ikyanabuzi    | Ibyanabuzi     |
+| Ingana   | Inyana        | Inyana         |
+| Imbene   | Inyanahene    | Ibyanahene     |
+| Ingulube | Kyanakulube   | Ibyanakulube   |
+| Ingoko   | Ikyanagoko    | Ibyanagoko     |
+| Ibata    | Kyana k'ibata | Byana by'ibata |
+|          |               |                |
