--- a/pages/amagambo/abaana-ibyaana.mdx
+++ b/pages/amagambo/abaana-ibyaana.mdx
@@ -6,12 +6,12 @@ Kiri na hano mw'itwe ly'amagaambo mugabona kwo kera twahushanisa gano magambo: K
 
 ### Umuundu
 
-| Iziina   | Buniini       | Bwiingi        |
-| -------- | ------------- | -------------- |
-| Ikibuzi  | Ikyanabuzi    | Ibyanabuzi     |
-| Ingana   | Inyana        | Inyana         |
-| Imbene   | Inyanahene    | Ibyanahene     |
-| Ingulube | Kyanakulube   | Ibyanakulube   |
-| Ingoko   | Ikyanagoko    | Ibyanagoko     |
-| Ibata    | Kyana k'ibata | Byana by'ibata |
-|          |               |                |
+| Iziina   | Buniini      | Bwiingi      |
+| -------- | ------------ | ------------ |
+| Ikibuzi  | Ikyanabuzi   | Ibyanabuzi   |
+| Ingaavu  | Inyana       | Inyana       |
+| Imbene   | Ikyanahene   | Ibyanahene   |
+| Ingulube | Ikyanakulube | Ibyanakulube |
+| Ingoko   | Ikyanagoko   | Ibyanagoko   |
+| Ibata    | -            | -            |
+| Ihinyuni | Ikyananyuni  | Ibyananyuni  |
