Add new words to Abaana

--- a/pages/amagambo/abaana-ibyaana.mdx
+++ b/pages/amagambo/abaana-ibyaana.mdx
@@ -6,12 +6,17 @@ Kiri na hano mw'itwe ly'amagaambo mugabona kwo kera twahushanisa gano magambo: K
 
 ### Umuundu
 
-| Iziina   | Buniini      | Bwiingi      |
-| -------- | ------------ | ------------ |
-| Ikibuzi  | Ikyanabuzi   | Ibyanabuzi   |
-| Ingaavu  | Inyana       | Inyana       |
-| Imbene   | Ikyanahene   | Ibyanahene   |
-| Ingulube | Ikyanakulube | Ibyanakulube |
-| Ingoko   | Ikyanagoko   | Ibyanagoko   |
-| Ibata    | -            | -            |
-| Ihinyuni | Ikyananyuni  | Ibyananyuni  |
+| Iziina   | Buniini (Umwanaa/Ikyaana) | Bwiingi (Abaana/Ibyaana) |
+| -------- | ------------------------- | ------------------------ |
+| Ikibuzi  | Ikyanabuzi                | Ibyanabuzi               |
+| Ingaavu  | Inyana                    | Inyana                   |
+| Imbene   | Ikyanahene                | Ibyanahene               |
+| Ingulube | Ikyanakulube              | Ibyanakulube             |
+| Ingoko   | Ikyanagoko                | Ibyanagoko               |
+| Ikibaata | -                         | -                        |
+| Ihinyuni | Ikyananyuni               | Ibyananyuni              |
+| Umuundu  | Umwana                    | Abaana                   |
+| Umushosi | Umutabana                 | Abatabana                |
+| Umukazi  | Umunyere                  | Abanyere                 |
+| Akabwa   | Ikibwana                  | Utubwana                 |
+| Isungura | -                         | -                        |
