--- a/pages/amagambo/abaana-ibyaana.mdx
+++ b/pages/amagambo/abaana-ibyaana.mdx
@@ -4,7 +4,7 @@ Umufuliiru agweeti ngisi kwo amudeta umwaana wo'muundu na ngisi kwo aliri mudeta
 
 Kiri na hano mw'itwe ly'amagaambo mugabona kwo kera twahushanisa gano magambo: Ku muundu tumudeta _Umwaana_ mu buniini na mu bwiingi tunadete _Abaana_. Ku binamishwa Umufuliiru amudeta _Ikyaana_ ku buniini na mu bwiingi, Umufuliiru amudeta _Ibyaana_. Tuloongage mu bwiingi ukushagirana na ngisi muundu kandi li ikinamishwa.
 
-### Umuundu
+### Loonga amagaambo hano
 
 | Iziina   | Buniini (Umwanaa/Ikyaana) | Bwiingi (Abaana/Ibyaana) |
 | -------- | ------------------------- | ------------------------ |
