Correct page name

--- a/pages/amagambo/abaana.mdx
+++ b/pages/amagambo/abaana.mdx
@@ -1,6 +1,6 @@
 # Menya gano maziina ku baandu na ku binamishwa
 
-Umufuliiru agweeti ngisi kwo amudeta umwaana wo'muundu na ngisi kwo aliri mudeta ikyana kye'kinamishwa.
+Umufuliiru agweeti ngisi kwo amudeta umwaana wo'muundu na ngisi kwo aliri mudeta ikyaana kye'kinamishwa.
 
 Kiri na hano mw'itwe ly'amagaambo mugabona kwo kera twahushanisa gano magambo: Ku muundu tumudeta _Umwaana_ mu buniini na mu bwiingi tunadete _Abaana_. Ku binamishwa Umufuliiru amudeta _Ikyaana_ ku buniini na mu bwiingi, Umufuliiru amudeta _Ibyaana_. Tuloongage mu bwiingi ukushagirana na ngisi muundu kandi li ikinamishwa.
 
