Add Umulyari muguma page

--- a/pages/ukuharura/umulyari.mdx
+++ b/pages/ukuharura/umulyari.mdx
@@ -1,6 +1,6 @@
 # Umulyari (1.000.000.000)
 
-Garura byooshi ibiloziri ukuharura ukuhisiri ku mulyari.
+Harura byooshi ibiloziri ukuharura ukuhisiri ku mulyari.
 
 1.000.000.000
 
