--- a/pages/ukuharura/umulyari-muguma.mdx
+++ b/pages/ukuharura/umulyari-muguma.mdx
@@ -112,4 +112,23 @@ Harura byooshi ibiloziri ukuharura kushagira ku mulyari muguma ukuhisa ku mulyar
 1.000.000.098 = Umulyari na makumi galimweenda na munaana  
 1.000.000.099 = Umulyari na makumi galimweenda na mweenda
 
-1.000.000.090 = Umulyari n'igana
+1.000.000.100 = Umulyari n'igana  
+1.000.000.200 = Umulyari na magana gabiri  
+1.000.000.300 = Umulyari na magana gashatu  
+1.000.000.400 = Umulyari na magana gana  
+1.000.000.500 = Umulyari na magana gatanu  
+1.000.000.600 = Umulyari na magana galindatu  
+1.000.000.700 = Umulyari na magana galiinda  
+1.000.000.800 = Umulyari na magana galimunaana  
+1.000.000.900 = Umulyari na magana galimweenda
+
+1.000.001.000 = Umulyari ne' kihumbi  
+1.000.002.000 = Umulyari ne' kihumbi
+1.000.001.000 = Umulyari ne' kihumbi
+1.000.001.000 = Umulyari ne' kihumbi
+1.000.001.000 = Umulyari ne' kihumbi
+1.000.001.000 = Umulyari ne' kihumbi
+1.000.001.000 = Umulyari ne' kihumbi
+1.000.001.000 = Umulyari ne' kihumbi
+1.000.001.000 = Umulyari ne' kihumbi
+1.000.001.000 = Umulyari ne' kihumbi
