fix: Correct capitalization of "Bufuliiru" in multiple files
- Updated the text in various JSON and MDX files to ensure consistent capitalization of "Bufuliiru" instead of "BUfuliiru". This change improves the accuracy of the content across the application.

@wemp_progress ibufuliiru-json-update-001 Update capitalization in ibufuliiru.json
@wemp_progress ibufuliiru-mdx-update-001 Update capitalization in ibufuliiru.mdx
@wemp_progress inyiji-json-update-001 Update capitalization in inyiji.json
@wemp_progress inyiji-mdx-update-001 Update capitalization in inyiji.mdx
@wemp_progress utwaya-json-update-001 Update capitalization in utwaya.json
@wemp_progress utwaya-mdx-update-001 Update capitalization in utwaya.mdx

--- a/data/ibufuliiru.mdx
+++ b/data/ibufuliiru.mdx
@@ -6,5 +6,5 @@ Ibufuliiru yo mwitu. Tuhatuziri. Tuhayiji, tumuhasima, yo' mwitu. Tumenye bingi 
 
 Kino kibaja kiliri hano kitumenyese bingi ku mwitu, Ibufuliiru. Bo bugale bwitu, ko kalaga kitu.
 
-Menya bingi ku BUfuliiru [hano](ibufuliiru.editorx.io/ibufuliiru)
+Menya bingi ku Bufuliiru [hano](ibufuliiru.editorx.io/ibufuliiru)
 
