--- a/data/inyiji.mdx
+++ b/data/inyiji.mdx
@@ -7,5 +7,5 @@ Ibufuliiru yo mwitu. Tuhatuziri. Tuhayiji, tumuhasima, yo'mwitu. Tumenye bingi k
 
 Kino kibaja kiliri hano kitumenyese bingi ku mwitu, Ibufuliiru. Bo bugale bwitu, ko kalaga kitu.
 
-Menya bingi ku BUfuliiru [hano](ibufuliiru.editorx.io/ibufuliiru)
+Menya bingi ku Bufuliiru [hano](ibufuliiru.editorx.io/ibufuliiru)
 
